# Thesis_Project

./: README.md
app/: main.py  pyproject.toml
app/config/: setting.json  setting.py
app/database/: data_simulation.py  database_manage.py
app/database/data/: 1.json  parkinglot_database.json  restaurant_database.json  restaurant_values_with_timestamp_db.json  test.json  test_1.json
app/endpoints/: collect.py  data_model.py  root.py  visvalize.py
app/model/: Model.py  data_manage.py  test.py  train.py
app/model/logs/: set_log.py
app/model/models/restaurant/: prophet.pkl  xgboost.pkl
app/templates/: index.html  table.html
app/templates/static/: file_load.html
