[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-server"
version = "0.1.0"
description = "A FastAPI server"

dependencies = [
    "absl-py==2.1.0",
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.10.10",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "asttokens==2.4.1",
    "astunparse==1.6.3",
    "attrs==24.2.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "cmdstanpy==1.2.4",
    "comm==0.2.2",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "Cython==3.0.11",
    "debugpy==1.8.8",
    "decorator==4.4.2",
    "executing==2.1.0",
    "fastapi==0.115.5",
    "fastjsonschema==2.20.0",
    "filelock==3.13.1",
    "flatbuffers==24.3.25",
    "fonttools==4.54.1",
    "frozenlist==1.5.0",
    "fsspec==2024.2.0",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.67.1",
    "h11==0.14.0",
    "h5py==3.12.1",
    "holidays==0.60",
    "idna==3.10",
    "importlib_resources==6.4.5",
    "ipykernel==6.29.5",
    "ipython==8.29.0",
    "ipywidgets==8.1.5",
    "jedi==0.19.2",
    "Jinja2==3.1.3",
    "joblib==1.4.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter_client==8.6.3",
    "jupyter_core==5.7.2",
    "jupyterlab_widgets==3.0.13",
    "keras==3.6.0",
    "kiwisolver==1.4.7",
    "libclang==18.1.1",
    "lightgbm==4.5.0",
    "Markdown==3.7",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.5",
    "matplotlib==3.9.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "ml-dtypes==0.4.1",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "namex==0.0.8",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.2.1",
    "numpy==1.26.3",
    "opt_einsum==3.4.0",
    "optree==0.13.1",
    "packaging==24.1",
    "pandas==2.2.3",
    "parso==0.8.4",
    "patsy==1.0.1",
    "pexpect==4.9.0",
    "pillow==10.2.0",
    "platformdirs==4.3.6",
    "plotly==5.24.1",
    "prompt_toolkit==3.0.48",
    "propcache==0.2.0",
    "prophet==1.1.6",
    "protobuf==5.28.3",
    "psutil==6.1.0",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "pydantic==2.10.2",
    "pydantic_core==2.27.1",
    "Pygments==2.18.0",
    "pyparsing==3.2.0",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.19",
    "pytz==2024.2",
    "pyzmq==26.2.0",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.21.0",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "six==1.16.0",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "stanio==0.5.1",
    "starlette==0.41.3",
    "statsmodels==0.14.4",
    "sympy==1.13.1",
    "tenacity==9.0.0",
    "termcolor==2.5.0",
    "threadpoolctl==3.5.0",
    "tinydb==4.8.2",
    "tornado==6.4.1",
    "tqdm==4.66.6",
    "traitlets==5.14.3",
    "triton==3.0.0",
    "typing_extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "uvicorn==0.32.1",
    "wcwidth==0.2.13",
    "Werkzeug==3.1.3",
    "widgetsnbextension==4.0.13",
    "wrapt==1.16.0",
    "xgboost==2.1.2",
    "yarl==1.17.1"

]

[tool.setuptools.packages.find]
where = ["."]

